# csi_router

./: .gitignore  CMakeLists.txt  README.md  partition_doc.md  partitions.csv  sdkconfig  sdkconfig.old
components/bsp/: CMakeLists.txt  Kconfig  bsp.c
components/bsp/include/: bsp.h
components/csi_app/: CMakeLists.txt  csi_app.c
components/csi_app/include/: csi_app.h
components/ui/: actions.c  actions.h  screens.c  screens.h  ui.c  ui.h  vars.c  vars.h
components/ui/old/: ui.c
components/ui/old/include/: ui.h
components/ui_old/: CMakeLists.txt  ui.c
main/: CMakeLists.txt  app_main.c  idf_component.yml
